Добавление ветки add-director